[project]
name = "udft"
version = "3.6.1"
description = "Unitary discrete Fourier Transform (and related)"
readme = "README.md"
authors = [
    { name = "François Orieux", email = "francois.orieux@universite-paris-saclay.fr" }
]
maintainers = [
    { name = "François Orieux", email = "francois.orieux@universite-paris-saclay.fr" }
]
license = "CC0-1.0"
keywords = ["fft", "orthonormal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "array-api-compat>=1.11.1",
]

[project.urls]
homepage = "https://udft.readthedocs.io/en/stable/"
documentation = "https://udft.readthedocs.io/en/stable/"
repository = "https://github.com/forieux/udft/"
issues = "https://github.com/forieux/udft/issues"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
"author webpage" = "https://pro.orieux.fr/"

[project.optional-dependencies]
scipy = [
    "scipy>=1.15.2",
]
fftw = [
    "pyfftw>=0.15.0",
]
all = [
    "pyfftw>=0.15.0",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "ipython>=9.0.2",
    "python-lsp-ruff>=2.2.2",
    "sphinx-autodoc-typehints>=3.1.0",
    "sphinx-rtd-theme>=3.0.2",
]
