[project]
name = "udft"
version = "4.0.1"
description = "Unitary discrete Fourier Transform (and related)"
readme = "README.md"
authors = [
    { name = "François Orieux", email = "francois.orieux@universite-paris-saclay.fr" }
]
maintainers = [
    { name = "François Orieux", email = "francois.orieux@universite-paris-saclay.fr" }
]
license = "Unlicense"
keywords = ["fft", "orthonormal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "array-api-compat>=1.11.1",
    "numpy>=2.2.3",
]

[project.urls]
homepage = "https://udft.readthedocs.io/en/stable/"
documentation = "https://udft.readthedocs.io/en/stable/"
repository = "https://github.com/forieux/udft/"
issues = "https://github.com/forieux/udft/issues"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
"author webpage" = "https://pro.orieux.fr/"

[project.optional-dependencies]
scipy = [
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.28.4",
    "bump2version>=1.0.1",
    "ipython>=9.0.2",
    "pytest>=8.3.5",
    "scipy-stubs>=1.15.2.1",
    "sphinx-autodoc-typehints>=3.1.0",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
